--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-cachetools==5.0.0
-exif==1.3.4
-future==0.18.2
 ImageHash==4.2.1
 numpy==1.22.1
-pefile==2021.9.3
+opencv-python==4.5.5.62
 Pillow==9.0.0
 plum-py==0.7.2
-py2exe==0.11.0.1
 pycodestyle==2.7.0
+pycparser==2.21
 PyWavelets==1.2.0
 scipy==1.7.3
 six==1.16.0
